Removed the need to re-enter the deployment names in the AWS exec workflows

--- a/.github/workflows/exec-aws-eks-deployment.yml
+++ b/.github/workflows/exec-aws-eks-deployment.yml
@@ -12,14 +12,8 @@ env:
 on:
   # Trigger the workflow manually from the Actions tab
   workflow_dispatch:
-    # It requires several inputs provided by the user
-    inputs:
-      # These inputs are required state and lock
-      eks_name:
-        description: 'Enter EKS name, the same as previously entered'
-        required: true
 
-        # Define permissions for this workflow
+# Define permissions for this workflow
 permissions:
   # Only read access to the contents is needed
   contents: read
@@ -64,12 +58,17 @@ jobs:
     # Setup Terraform CLI on the runner
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
+
+    # Get Cluster Name
+    - name: Get Cluster Name
+      run: |
+        echo "cluster_name=$(grep 'name\s*=' ./main.tf | awk -F"=" 'NR==1 {print $2}' | xargs)" >> $GITHUB_ENV
     
     # Initialise your Terraform working directory 
     - name: Terraform Init S3    
       run: |
         terraform init -backend-config="bucket=global-gh-tf-state" \
-                       -backend-config="key=terraform-state-files/${{ github.event.inputs.eks_name }}-tf-state/terraform.tfstate" \
+                       -backend-config="key=terraform-state-files/${{ env.cluster_name }}-tf-state/terraform.tfstate" \
                        -backend-config="encrypt=true" \
                        -backend-config="kms_key_id=arn:aws:kms:eu-west-2:accountnumberhere:key/key-id-here" \
                        -backend-config="region=eu-west-2" \
@@ -103,6 +102,10 @@ jobs:
     # Upload the main.tf to s3
     - name: S3 Upload
       if: env.apply_failed != 'true'
-      run:  |
-        aws s3 cp main.tf s3://global-gh-tf-state/terraform-state-files/${{ github.event.inputs.eks_name }}-tf-state/main.tf
-        aws s3 cp ${{ github.workspace }}/modules/aws-eks-cluster/private_key.pem s3://global-gh-tf-state/terraform-state-files/${{ github.event.inputs.eks_name }}-tf-state/private_key.pem || echo "No private_key.pem to upload"
+      run:  |        
+        aws s3 cp main.tf s3://global-gh-tf-state/terraform-state-files/${{ env.cluster_name }}-tf-state/main.tf
+        if aws s3api head-object --bucket "global-gh-tf-state" --key "terraform-state-files/${{ env.cluster_name }}-tf-state/private_key.pem" 2>/dev/null; then
+          echo "File already exists in S3. Not overwriting."
+        else 
+          aws s3 cp ${{ github.workspace }}/modules/aws-eks-cluster/private_key.pem s3://global-gh-tf-state/terraform-state-files/${{ env.cluster_name }}-tf-state/private_key.pem 
+        fi
