--- a/.github/workflows/tf-vsphere-rocky-9.3-pipeline.yml
+++ b/.github/workflows/tf-vsphere-rocky-9.3-pipeline.yml
@@ -1,11 +1,23 @@
+# Author:  Joe Harrison
+# This is a GitHub Actions workflow that uses Terraform to deploy a vSphere Rocky Linux 9.3 VM. 
+# It will generate a main.tf file based on user input, in the root of the repository and then apply the Terraform configuration to create the VM. 
+# If the Terraform apply fails, it will initiate a cleanup by destroying the resources created.
+
 # Name of the workflow
-name: 'Init vSphere Rocky 9.3 CD'
+name: 'vSphere Rocky 9.3 CD'
+
+# Define environment variables
+env:
+  # vSphere password used for authentication
+  TF_VAR_vsphere_password: ${{ secrets.VSPHERE_PASSWORD }}
+  # SSH password used for authentication
+  TF_VAR_ssh_password: ${{ secrets.SSH_PASSWORD }}  
+
+# Define the events that trigger the workflow
 on:
-  # This workflow is triggered manually
+  # Trigger the workflow manually from the Actions tab
   workflow_dispatch:
-    # It requires several inputs provided by the user
     inputs:
-      # These inputs are details for the vSphere environment, deployment parameters, and vSphere object information
       vsphere_cluster:
         description: 'Enter the name of the vSphere cluster to deploy the rocky host on'
         required: true
@@ -51,41 +63,35 @@ on:
 
 # Define permissions for this workflow
 permissions:
-  # Only read access to the contents is needed
   contents: read
 
 # Define jobs in this workflow  
 jobs:
-  # Define a job for Terraform actions
+  # Define a job for main.tf file actions
   generate-main-tf:
-    # Name of the job  
-    name: 'Terraform Rocky 9.3 main.tf Generation'
-    # Define the type of runner that the job will run on
+    name: 'Terraform vSphere Rocky 9.3 main.tf Generation'
     runs-on: [self-hosted, devops]
-    # Define the environment in which the job will run
     environment: production
-    
-    # Define steps for this job
+
     steps:
       # Checkout the repository to the GitHub Actions runner 
       - name: Checkout
-        uses: actions/checkout@v3    
+        uses: actions/checkout@v3  
 
-      # Then we check if main.tf already exists in the repo          
+      # If main.tf does not exist, we generate a new one using user input
       - name: Check if main.tf exists
         run: |
           if [ -f "main.tf" ]; then
             echo "main.tf already exists, skipping file generation."
-            echo "file_exists=true" >> $GITHUB_OUTPUT
+            echo "file_exists=true" >> $GITHUB_ENV      
           else
             echo "main.tf does not exist, continuing with file generation."
-            echo "file_exists=false" >> $GITHUB_OUTPUT
+            echo "file_exists=false" >> $GITHUB_ENV
           fi
         id: check-main-tf
       
-      # If main.tf does not exist, we generate a new one using user input
       - name: Generate main.tf with user input
-        if: steps.check-main-tf.outputs.file_exists == 'false'
+        if: env.file_exists == 'false'
         run: |
           # Using the Internal Field Separator (IFS) variable, parse the input strings into individual variables
           IFS=',' read -r hostname vsphere_server <<< "${{ github.event.inputs.hostname }}"
@@ -178,3 +184,53 @@ jobs:
           git add main.tf
           git commit -m "Add generated main.tf"
           git push 
+
+  # Define a job for Terraform actions          
+  terraform-vsphere-rocky-9_3-pipeline:
+    name: 'Terraform vSphere Rocky Linux 9.3 Pipeline'
+    needs: generate-main-tf
+    runs-on: [self-hosted, devops]
+    environment: production
+
+    steps:          
+    # Checkout the repository to the GitHub Actions runner 
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    # Setup Node.js environment with a specific version
+    - name: Node Setup
+      uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+    
+    # Setup Terraform CLI on the runner
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v2
+    
+    # Initialise your Terraform working directory
+    - name: Terraform Init
+      run: terraform init
+
+    # Generate an execution plan for Terraform
+    - name: Terraform Plan
+      run: terraform plan
+    
+    # Apply the changes required to reach the desired state of the configuration
+    - name: Terraform Apply
+      id: apply    
+      continue-on-error: true
+      run: terraform apply -auto-approve
+
+    # Check if Terraform Apply failed and set an output variable
+    - name: Check Terraform Apply Outcome
+      id: check
+      run: echo "apply_failed=${{ steps.apply.outcome == 'failure' }}" >> $GITHUB_ENV
+
+    # Destroy if Terraform Apply failed
+    - name: Terraform Apply Failure Handler
+      if: env.apply_failed == 'true'
+      id: failure-handler
+      run: |
+        echo "Terraform Apply failed. Initiating cleanup..."
+        terraform destroy -auto-approve
+        echo "cleanup_done=true" >> $GITHUB_ENV      
