added eks ebs csi driver addon

--- a/.github/workflows/tf-aws-eks-pipeline.yml
+++ b/.github/workflows/tf-aws-eks-pipeline.yml
@@ -132,6 +132,10 @@ jobs:
               {
                 name    = "aws-ebs-csi-driver"
               }
+              ,
+              {
+                name    = "aws-efs-csi-driver"
+              }              
             ]          
             
             # Configuration for the first node pool
